--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'apscheduler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-f57b4c8c82c7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mapscheduler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mschedulers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackground\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBackgroundScheduler\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscheduler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBackgroundScheduler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'apscheduler'"
+     ]
+    }
+   ],
    "source": [
     "from apscheduler.schedulers.background import BackgroundScheduler\n",
     "\n",
@@ -14,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,43 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scheduler.start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,32 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n",
-      "I am doing something - really busy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mFunc():\n",
     "    print('I joined too')"
@@ -111,66 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n",
-      "I joined too\n",
-      "I joined too\n",
-      "I am doing something - really busy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "job = scheduler.add_job(mFunc, 'interval', seconds=1)"
    ]
@@ -199,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
